# libyuv-android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/android/opensource/libyuv_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/org/android/opensource/libyuv_android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/android/opensource/libyuv_android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libraryyuv/: CMakeLists.txt  build.gradle
libraryyuv/src/androidTest/java/org/android/opensource/libraryyuv/: ExampleInstrumentedTest.java
libraryyuv/src/main/: AndroidManifest.xml
libraryyuv/src/main/cpp/: native-lib.cpp
libraryyuv/src/main/java/org/android/opensource/libraryyuv/: Libyuv.java
libraryyuv/src/main/res/values/: strings.xml
libraryyuv/src/test/java/org/android/opensource/libraryyuv/: ExampleUnitTest.java
